perfect quote app

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Get Quotes</title>
-    <link href="{{ url_for('static', filename='styles/style.css') }}" rel="favicon.ico" />
+    <title>Get New Quote</title>
+    <link href="{{ url_for('static', filename='styles/style.css') }}" rel="stylesheet"/>
 </head>
 <body>
-    <h1>Get Quotes</h1>
+    <h1>Get New Quote</h1>
     <form action="/quote">
-        <input type="text" name="keyword" id="keyword" placeholder="Enter a Keyword" />
-        <button type="submit">Submit</button>
+        <input type="text" name="keyword" id="keyword" placeholder="Enter a Keyword"/>
+        <button type="submit">Learn</button>
     </form>
 </body>
-</html>a
+</html>
