--- a/templates/quote-not-found.html
+++ b/templates/quote-not-found.html
@@ -11,7 +11,7 @@
     <p>Try another keyword!</p>
     <form action="/quote">
         <input type="text" name="keyword" id="keyword" placeholder="Enter a City" />
-        <button type="submit">Submit</button>
+        <button type="submit">Learn</button>
     </form>
 </body>
 </html>
