--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,12 +1,12 @@
 body {
     padding: 2rem;
-    background-color: #333;
+    background-color: #c06224;
     color: whitesmoke;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2rem;
+    gap: 1rem;
     font-size: 2rem;
 }
 
@@ -14,4 +14,14 @@ input, button {
     font-size: 2rem;
     padding: 1rem;
     border-radius: 10px;
+    border: 2px solid white;
+}
+
+button {
+    transition: all 1s ease;
+}
+
+button:hover{
+    color: white;
+    background-color: black;
 }
