understand the task

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Get New Quote</h1>
     <form action="/quote">
-        <input type="text" name="keyword" id="keyword" placeholder="Enter a Keyword"/>
+        <input type="text" name="category" id="keyword" placeholder="Enter a Keyword"/>
         <button type="submit">Learn</button>
     </form>
 </body>
