--- a/templates/quote-not-found.html
+++ b/templates/quote-not-found.html
@@ -10,7 +10,7 @@
     <h1>Quote Not Found</h1>
     <p>Try another keyword!</p>
     <form action="/quote">
-        <input type="text" name="keyword" id="keyword" placeholder="Enter a City" />
+        <input type="text" name="category" id="keyword" placeholder="Enter a City" />
         <button type="submit">Learn</button>
     </form>
 </body>
