update on keyword

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1>Get New Quote</h1>
+    <p>E.g, Love, Happiness, Imagination, etc.</p>
     <form action="/quote">
-        <input type="text" name="category" id="keyword" placeholder="Enter a Keyword"/>
+        <input type="text" name="category" id="keyword" placeholder="Enter a Category"/>
         <button type="submit">Learn</button>
     </form>
 </body>
