--- a/templates/quote-not-found.html
+++ b/templates/quote-not-found.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h1>Quote Not Found</h1>
-    <p>Try another keyword!</p>
+    <p>Try another category!</p>
+    <p>E.g, Love, Happiness, Imagination, etc.</p>
     <form action="/quote">
-        <input type="text" name="category" id="keyword" placeholder="Enter a City" />
+        <input type="text" name="category" id="keyword" placeholder="Enter another Category" />
         <button type="submit">Learn</button>
     </form>
 </body>
