--- a/templates/quote.html
+++ b/templates/quote.html
@@ -12,7 +12,7 @@
     <p> By {{author}}</p>
 
     <form action="/quote">
-        <input type="text" name="keyword" id="keyword" placeholder="Enter a Keyword"/>
+        <input type="text" name="keyword" id="keyword" placeholder="Enter a Category"/>
         <button type="submit">Learn</button>
     </form>
 </body>
