--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>Get New Quote</title>
     <link href="{{ url_for('static', filename='styles/style.css') }}" rel="stylesheet"/>
 </head>
-<body class="page">
+<body>
     <h1>Get New Quote</h1>
     <p>E.g, Love, Happiness, Imagination, etc.</p>
     <form action="/quote">
