--- a/templates/quote-not-found.html
+++ b/templates/quote-not-found.html
@@ -6,7 +6,7 @@
     <title>Quote Not Found</title>
     <link href="{{ url_for('static', filename='styles/style.css') }}" rel="stylesheet" />
 </head>
-<body class="page">
+<body>
     <h1>Quote Not Found</h1>
     <p>Try another category!</p>
     <p>E.g, Love, Happiness, Imagination, etc.</p>
