--- a/templates/quote.html
+++ b/templates/quote.html
@@ -6,7 +6,7 @@
     <title> A Quote on {{keyword}} </title>
     <link href="{{ url_for('static', filename='styles/style.css')}}" rel="stylesheet" />
 </head>
-<body class="page">
+<body>
     <h1> A Quote on {{keyword}} </h1>
     <p> {{quote}} </p>
     <p> By {{author}}</p>
